week3/S3 & DynamoDB/practice/sg.tf
resource "aws_security_group" "instance" {
  vpc_id = aws_vpc.terraform-vpc.id
  name = "terraform-example-instance"

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
